--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.16.1",
-		"@auth/sveltekit": "^0.3.9",
-		"svelte-navigator": "^3.2.2",
-		"svelte-routing": "^2.5.0"
+		"@auth/sveltekit": "^0.3.9"
 	}
 }
