--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"dependencies": {
 		"@auth/core": "^0.16.1",
 		"@auth/sveltekit": "^0.3.11",
-		"ionicons": "^7.2.1",
+		"lucide-svelte": "^0.292.0",
 		"mongodb": "^6.2.0"
 	}
 }
