--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"feather-icons": "^4.29.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^5.6.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
@@ -32,6 +33,10 @@
 	"dependencies": {
 		"@auth/core": "^0.16.1",
 		"@auth/sveltekit": "^0.3.11",
+		"@libsql/client": "^0.3.6",
+		"@prisma/adapter-libsql": "^5.6.0",
+		"@prisma/client": "^5.6.0",
+		"lucide": "^0.292.0",
 		"lucide-svelte": "^0.292.0",
 		"mongodb": "^6.2.0"
 	}
