--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"typescript": "^4.9.3"
 	},
 	"type": "module",
 	"dependencies": {
@@ -41,6 +40,7 @@
 		"lucide": "^0.292.0",
 		"lucide-svelte": "^0.292.0",
 		"mongodb": "^6.2.0",
-		"turso": "^0.1.0"
+		"turso": "^0.1.0",
+		"vite": "^4.0.0"
 	}
 }
